@@ -100,6 +100,8 @@ public:
                 ok = config.fromConfigFile(altConfig.c_str());
             }
         }
+        /*
+          // this would violate the spec
         if (!ok) {
             if (verbose) {
                 fprintf(RTARGET,"||| in desperation, loading policy from %s\n",
@@ -109,6 +111,7 @@ public:
             checked += policyName;
             ok = config.fromConfigFile(policyName);
         }
+        */
         if (!ok) {
             fprintf(RTARGET,"||| failed to load policy from%s\n", 
                     checked.c_str());
