@@ -1,5 +1,8 @@
 2008-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/src/BottleImpl.cpp: stop the character
+	sequence "." from being interpreted as a number.
+
 	* src/libYARP_OS/harness/ResourceFinderTest.cpp: start adding
 	regression tests for ResourceFinder
 
